# SvcHostify

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  README.md  svchostify.schema.json
samples/cpp/test-service/: CMakeLists.txt  svchostify_cpp.json
samples/cpp/test-service/src/: CMakeLists.txt  entry.cpp
samples/csharp/Refvalue.Samples.SvcHost/: ISvcHostify.cs  Refvalue.Samples.SvcHost.csproj  Refvalue.Samples.SvcHost.sln  TestService.cs  key.snk  svchostify_csharp.json
samples/java/: svchostify_java.json
samples/java/org/refvalue/: SvcHostify.java
src/: CMakeLists.txt  SvcHostifyConfig.cmake.in  common_types.hpp  common_types.ixx  config_setup.cpp  config_setup.hpp  config_setup.ixx  file_size_unit.cpp  file_size_unit.cxx  file_size_unit.hpp  filesystem_tokens.cxx  filesystem_tokens.hpp  main.cpp  registry.cpp  registry.cxx  registry.hpp  service_config.cpp  service_config.hpp  service_config.ixx  service_manager.cpp  service_manager.hpp  service_manager.ixx  service_process.cpp  service_process.hpp  service_process.ixx  service_registry_keys.cxx  service_registry_keys.hpp  service_worker.cpp  service_worker.hpp  service_worker.ixx  startup_info.hpp  startup_info.ixx  svchostify.ixx  util.cpp  util.hpp  util.ixx
src/abstract/: service_worker.cxx  service_worker.hpp
src/win32/: ISvcHostify.cxx  ISvcHostify.hpp  svchost.cxx  svchost.h
src/workers/: com_service_worker.cpp  executable_service_worker.cpp  jvm_service_worker.cpp  pure_c_service_worker.cpp
